Fixing z-index and adding styles for collapsed sidebar

--- a/src/components/Main/MiniVideoCard.module.sass
+++ b/src/components/Main/MiniVideoCard.module.sass
@@ -3,6 +3,7 @@
   text-decoration: none
   color: #fff
   gap: 1rem
+  z-index: 4
   &__image
     height: 100%
     width: 100%
